force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Object to hold all information about an invoice and used to generate the invoice document.</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>