force-app/main/default/objects/Invoice__c/fields/Account_Fields_Not_Populated__c.field-meta.xml
<CustomField>
    <fullName>Account_Fields_Not_Populated__c</fullName>
    <formula>IF(ISBLANK( Account__r.Invoice_Method__c ) 
|| ISBLANK(  Account__r.Invoice_To_Contact__c  )
|| ISBLANK(  Account__r.BillingAddress )
|| ISBLANK( TEXT( Account__r.Payment_Terms_Days__c)  )
|| ISBLANK( TEXT( Account__r.VAT_Applicable__c)  )
|| ISBLANK(  QuickBooks_Nominal_Code__c  )
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Fields Not Populated</label>
    <type>Checkbox</type>
</CustomField>