force-app/main/default/objects/Invoice__c/fields/Account_Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Account_Invoice_Comments__c</fullName>
    <label>Account Invoice Comments</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>