force-app/main/default/objects/Invoice__c/fields/AtW_Claim_Form_P3_Company_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>AtW_Claim_Form_P3_Company_Name_Address__c</fullName>
    <label>AtW Claim Form: P3 Company Name Address</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>