force-app/main/default/objects/Invoice__c/fields/AtW_Claim_Form_P3_Name__c.field-meta.xml
<CustomField>
    <fullName>AtW_Claim_Form_P3_Name__c</fullName>
    <formula>TEXT(Account__r.AtW_Claim_Form_P3_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Claim Form: P3 Name</label>
    <type>Text</type>
</CustomField>