force-app/main/default/objects/Invoice__c/fields/AtW_Claim_Form_P3_Position__c.field-meta.xml
<CustomField>
    <fullName>AtW_Claim_Form_P3_Position__c</fullName>
    <formula>Account__r.AtW_Claim_Form_P3_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Claim Form: P3 Position</label>
    <type>Text</type>
</CustomField>