force-app/main/default/objects/Invoice__c/fields/AtW_Claim_Form_P3_Signed_By_Us__c.field-meta.xml
<CustomField>
    <fullName>AtW_Claim_Form_P3_Signed_By_Us__c</fullName>
    <formula>IF(TEXT(Account__r.AtW_Claim_Form_Signed_By_Us__c)=&apos;Yes&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Claim Form: P3 Signed By Us?</label>
    <type>Checkbox</type>
</CustomField>