force-app/main/default/objects/Invoice__c/fields/AtW_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>AtW_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AtW Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (AtW Customer Contact)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>