force-app/main/default/objects/Invoice__c/fields/AtW_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>AtW_Customer_Email__c</fullName>
    <formula>Account__r.AtW_Customer_Contact_Record__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Customer Email</label>
    <type>Text</type>
</CustomField>