force-app/main/default/objects/Invoice__c/fields/AtW_Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AtW_Customer_First_Name__c</fullName>
    <formula>Account__r.AtW_Customer_Contact_Record__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Customer First Name</label>
    <type>Text</type>
</CustomField>