force-app/main/default/objects/Invoice__c/fields/AtW_Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AtW_Customer_Last_Name__c</fullName>
    <formula>Account__r.AtW_Customer_Contact_Record__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Customer Last Name</label>
    <type>Text</type>
</CustomField>