force-app/main/default/objects/Invoice__c/fields/AtW_Customer_Title__c.field-meta.xml
<CustomField>
    <fullName>AtW_Customer_Title__c</fullName>
    <formula>TEXT( Account__r.AtW_Customer_Contact_Record__r.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtW Customer Title</label>
    <type>Text</type>
</CustomField>