force-app/main/default/objects/Invoice__c/fields/AtW_Ref__c.field-meta.xml
<CustomField>
    <fullName>AtW_Ref__c</fullName>
    <formula>Account__r.AtW_Ref__c</formula>
    <label>AtW Ref</label>
    <type>Text</type>
</CustomField>