force-app/main/default/objects/Invoice__c/fields/Call_Plan_Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Plan_Invoice_Frequency__c</fullName>
    <label>Call Plan Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Off</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>