force-app/main/default/objects/Invoice__c/fields/Conga_Doc_Created__c.field-meta.xml
<CustomField>
    <fullName>Conga_Doc_Created__c</fullName>
    <label>Conga Doc Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>