force-app/main/default/objects/Invoice__c/fields/Create_Conga_Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>Create_Conga_Invoice_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Conga Invoice PDF</label>
    <type>Checkbox</type>
</CustomField>