force-app/main/default/objects/Invoice__c/fields/Customer_portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_portal_URL__c</fullName>
    <formula>Account__r.Customer_Portal_URL__c</formula>
    <label>Customer portal URL</label>
    <type>Text</type>
</CustomField>