force-app/main/default/objects/Invoice__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <inlineHelpText>Automatically updated based on Account Type</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2B Or Home Plan</fullName>
            </value>
            <value>
                <fullName>PAYG</fullName>
            </value>
            <value>
                <fullName>Account Type Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>