force-app/main/default/objects/Invoice__c/fields/Days_in_Opp_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Opp_End_Month__c</fullName>
    <formula>DAY(DATE(YEAR(  Opportunity__r.Opportunity_End_Date__c  ),MONTH( Opportunity__r.Opportunity_End_Date__c )+1,1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Opp End Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>