force-app/main/default/objects/Invoice__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>Account__r.Entity_Formula__c</formula>
    <label>Entity</label>
    <type>Text</type>
</CustomField>