force-app/main/default/objects/Invoice__c/fields/Excess_Charge__c.field-meta.xml
<CustomField>
    <fullName>Excess_Charge__c</fullName>
    <formula>Excess_Minutes__c * Excess_Charge_per_Minute__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>