force-app/main/default/objects/Invoice__c/fields/Excess_Charge_per_Minute__c.field-meta.xml
<CustomField>
    <fullName>Excess_Charge_per_Minute__c</fullName>
    <formula>Opportunity__r.Excess_Charge_per_Minute__c</formula>
    <label>Excess Charge per Minute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>