force-app/main/default/objects/Invoice__c/fields/Excess_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Excess_Minutes__c</fullName>
    <formula>IF( Pro_Rata_2__c =false &amp;&amp;  Minutes_Used__c &gt; Minutes_Allowed__c &amp;&amp;  NOT(ISPICKVAL( Customer_Type__c,&quot;PAYG&quot;)&amp;&amp; ISBLANK( Parent_Invoice__c )),Minutes_Used__c-Minutes_Allowed__c ,
IF(Pro_Rata_2__c =true &amp;&amp;  Minutes_Used__c &gt;  Pro_Rata_Minutes__c &amp;&amp;  NOT(ISPICKVAL( Customer_Type__c,&quot;PAYG&quot;)&amp;&amp;ISBLANK( Parent_Invoice__c )) ,Minutes_Used__c-Pro_Rata_Minutes__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>