force-app/main/default/objects/Invoice__c/fields/iNOW_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>iNOW_Invoice_Number__c</fullName>
    <displayFormat>IN-{0000000}</displayFormat>
    <label>iNOW Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>