force-app/main/default/objects/Invoice__c/fields/Invoice_Actual_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Actual_Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>