force-app/main/default/objects/Invoice__c/fields/Invoice_CC_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_CC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice CC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Invoice CC Contact)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>