force-app/main/default/objects/Invoice__c/fields/Invoice_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_CC_Email__c</fullName>
    <formula>Account__r.Invoice_CC_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice CC Email</label>
    <type>Text</type>
</CustomField>