force-app/main/default/objects/Invoice__c/fields/Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Comments__c</fullName>
    <formula>Opportunity__r.Invoice_Comments__c</formula>
    <label>Invoice Comments</label>
    <type>Text</type>
</CustomField>