force-app/main/default/objects/Invoice__c/fields/Invoice_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Template__c</fullName>
    <formula>CASE(Entity__c ,
&quot;SignVideo&quot;, &quot;00X63000001SeDiEAK&quot;,
&quot;InterpreterNow&quot;, &quot;00X63000001SeEMEA0&quot;,
&quot;Sign Language Interactions&quot;, &quot;00X63000001SeEREA0&quot; ,
&quot;00X63000001SeDiEAK&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email Template</label>
    <type>Text</type>
</CustomField>