force-app/main/default/objects/Invoice__c/fields/Invoice_From__c.field-meta.xml
<CustomField>
    <fullName>Invoice_From__c</fullName>
    <inlineHelpText>Invoice from date of call plan. Populated by roll up app</inlineHelpText>
    <label>Invoice From</label>
    <type>Date</type>
</CustomField>