force-app/main/default/objects/Invoice__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <formula>IF(INCLUDES( Account__r.Invoice_Method__c ,&quot;E-Mail&quot;),&quot;E-Mail;&quot;,null)&amp;
IF(INCLUDES(Account__r.Invoice_Method__c,&quot;Client Online Portal&quot;),&quot;Client Online Portal;&quot;,null)&amp;
IF(INCLUDES(Account__r.Invoice_Method__c,&quot;Post&quot;),&quot;Post;&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is populated from the Invoice Method field on Account</inlineHelpText>
    <label>Invoice Method</label>
    <type>Text</type>
</CustomField>