force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>CASE(Entity__c ,
 &quot;SignVideo&quot;,  Sign_Video_Invoice_Number__c,
 &quot;InterpreterNow&quot;,  iNOW_Invoice_Number__c,
 &quot;Sign Language Interactions&quot;,  SLI_Invoice_Number__c ,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>