force-app/main/default/objects/Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent via Email</fullName>
            </value>
            <value>
                <fullName>Sent via Post</fullName>
            </value>
            <value>
                <fullName>Sent via Portal</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>