force-app/main/default/objects/Invoice__c/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SignVideo - AtW Template</fullName>
            </value>
            <value>
                <fullName>SignVideo - Standard Template</fullName>
            </value>
            <value>
                <fullName>InterpreterNow - AtW Template</fullName>
            </value>
            <value>
                <fullName>InterpreterNow - Standard Template</fullName>
            </value>
            <value>
                <fullName>Sign Language Interactions - AtW Template</fullName>
            </value>
            <value>
                <fullName>Sign Language Interactions - Standard Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>