force-app/main/default/objects/Invoice__c/fields/Invoice_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To__c</fullName>
    <inlineHelpText>Invoice to date of call plan. Populated by roll up app</inlineHelpText>
    <label>Invoice To</label>
    <type>Date</type>
</CustomField>