force-app/main/default/objects/Invoice__c/fields/Invoice_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Email__c</fullName>
    <formula>Account__r.Invoice_To_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice To Email</label>
    <type>Text</type>
</CustomField>