force-app/main/default/objects/Invoice__c/fields/Invoice_To_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_First_Name__c</fullName>
    <formula>Account__r.Invoice_To_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice To First Name</label>
    <type>Text</type>
</CustomField>