force-app/main/default/objects/Invoice__c/fields/Invoice_Version__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Version__c</fullName>
    <inlineHelpText>This field is to be MANUALLY INPUT/EDITED by the Finance Team.</inlineHelpText>
    <label>Invoice Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
            <value>
                <fullName>-3</fullName>
            </value>
            <value>
                <fullName>-4</fullName>
            </value>
            <value>
                <fullName>-5</fullName>
            </value>
            <value>
                <fullName>-6</fullName>
            </value>
            <value>
                <fullName>-7</fullName>
            </value>
            <value>
                <fullName>-8</fullName>
            </value>
            <value>
                <fullName>-9</fullName>
            </value>
            <value>
                <fullName>-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>