force-app/main/default/objects/Invoice__c/fields/Invoicing_Status_from_Opp__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Status_from_Opp__c</fullName>
    <inlineHelpText>Invoicing status of Opportunity at time invoice was created</inlineHelpText>
    <label>Invoicing Status from Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>