force-app/main/default/objects/Invoice__c/fields/Itemised_Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Itemised_Invoice_Required__c</fullName>
    <formula>IF(ISPICKVAL( Account__r.Itemised_Billing__c , &quot;Yes&quot;), TRUE, FALSE)</formula>
    <label>Itemised Invoice Required</label>
    <type>Checkbox</type>
</CustomField>