force-app/main/default/objects/Invoice__c/fields/Minutes_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Allowed__c</fullName>
    <inlineHelpText>Will be automatically updated from the Opportunity</inlineHelpText>
    <label>Mins Allowed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>