force-app/main/default/objects/Invoice__c/fields/Minutes_Charge_per_Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Charge_per_Invoice_Period__c</fullName>
    <formula>Opportunity__r.Minutes_Charge_per_Invoice_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mins Charge per Invoice Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>