force-app/main/default/objects/Invoice__c/fields/Minutes_Used__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Used__c</fullName>
    <label>Mins Used</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>