force-app/main/default/objects/Invoice__c/fields/No_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>No_Line_Items__c</fullName>
    <label>No Line Items</label>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>