force-app/main/default/objects/Invoice__c/fields/No_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Accounts__c</fullName>
    <formula>Account__r.Number_of_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>