force-app/main/default/objects/Invoice__c/fields/Parent_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Parent_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If an excess invoice this will link to the full invoice</inlineHelpText>
    <label>Parent Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>