force-app/main/default/objects/Invoice__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <formula>Invoice_Date__c + Payment_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>