force-app/main/default/objects/Invoice__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>VALUE(TEXT(Account__r.Payment_Terms_Days__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>