force-app/main/default/objects/Invoice__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated in process builder when account is CREATED</description>
    <inlineHelpText>Updated from Account</inlineHelpText>
    <label>PO Required</label>
    <type>Checkbox</type>
</CustomField>