force-app/main/default/objects/Invoice__c/fields/PO_Required_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_Email_Text__c</fullName>
    <formula>IF( PO_Required__c =True &amp;&amp; ISBLANK( Purchase_Order_Number__c ),&apos;Please could you provide us with a Purchase Order number for this invoice.&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Required Email Text</label>
    <type>Text</type>
</CustomField>