force-app/main/default/objects/Invoice__c/fields/Pro_Rata_2__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rata_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Rata</label>
    <type>Checkbox</type>
</CustomField>