force-app/main/default/objects/Invoice__c/fields/Pro_Rata_Minutes_Charge__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rata_Minutes_Charge__c</fullName>
    <formula>IF( Pro_Rata_2__c =true &amp;&amp; ISPICKVAL( Customer_Type__c,&quot;B2C&quot;) &amp;&amp; Invoicing_Status_from_Opp__c =&quot;First&quot;,  Minutes_Charge_per_Invoice_Period__c /Days_in_Opp_Start_Month__c * (DAY(Invoice_To__c)-DAY(Invoice_From__c)+1) ,
IF( Pro_Rata_2__c =true &amp;&amp; ISPICKVAL( Customer_Type__c,&quot;B2C&quot;)&amp;&amp; Invoicing_Status_from_Opp__c =&quot;Last&quot;, Minutes_Charge_per_Invoice_Period__c/Days_in_Opp_End_Month__c * DAY( Invoice_From__c ) ,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro Rata Mins Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>