force-app/main/default/objects/Invoice__c/fields/QB_Override_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Override_Account__c</fullName>
    <formula>Account__r.QuickBooks_Override_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Override Account</label>
    <type>Text</type>
</CustomField>