force-app/main/default/objects/Invoice__c/fields/QB_Payment__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The QB Payment record that most recently updated this Invoice</inlineHelpText>
    <label>QB Payment</label>
    <referenceTo>QB_Payment__c</referenceTo>
    <relationshipLabel>Invoices Processed</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>