force-app/main/default/objects/Invoice__c/fields/QB_Reference__c.field-meta.xml
<CustomField>
    <fullName>QB_Reference__c</fullName>
    <description>Account__r.Name</description>
    <formula>IF ( ISBLANK( Account__r.QuickBooks_Override_Account__c ), 
 Account__r.Account_Long_ID__c &amp;&quot;@sf.com&quot;,
  Account__r.QuickBooks_Override_Account__r.Account_Long_ID__c &amp;&quot;@sf.com&quot;
)</formula>
    <label>QB Reference</label>
    <type>Text</type>
</CustomField>