force-app/main/default/objects/Invoice__c/fields/QB_Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>QB_Vat_Rate__c</fullName>
    <formula>IF ( ISPICKVAL( Account__r.VAT_Applicable__c , &quot;No&quot;),&quot;12&quot;,&quot;6&quot;)</formula>
    <inlineHelpText>Convert to the Quickbooks Tax Reference 
No Vat = 12
20% = 6</inlineHelpText>
    <label>QB Vat Rate</label>
    <type>Text</type>
</CustomField>