force-app/main/default/objects/Invoice__c/fields/Quickbooks_Account_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Account_Name_text__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Quickbooks Account Name (text)</label>
    <type>Text</type>
</CustomField>