force-app/main/default/objects/Invoice__c/fields/QuickBooks_Location__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Location__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.QuickBooks_Nominal_Code__c, &quot;420000&quot;), &quot;1&quot;,
IF(ISPICKVAL(Account__r.QuickBooks_Nominal_Code__c, &quot;422000&quot;), &quot;2&quot;,
IF(ISPICKVAL(Account__r.QuickBooks_Nominal_Code__c, &quot;430000&quot;), &quot;3&quot;,
IF(ISPICKVAL(Account__r.QuickBooks_Nominal_Code__c, &quot;440000&quot;), &quot;3&quot;,
IF(ISPICKVAL(Account__r.QuickBooks_Nominal_Code__c, &quot;445000&quot;), &quot;4&quot;,
NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts QuickBooks Nominal Code on the Account record to the actual QB reference of the location (department):
420000 = B2B = 1
422000 = B2PS = 2
430000 or 440000 = B2C = 3
450000 = National = 4</inlineHelpText>
    <label>QuickBooks Location</label>
    <type>Text</type>
</CustomField>