force-app/main/default/objects/Invoice__c/fields/QuickBooks_Nominal_Code__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Nominal_Code__c</fullName>
    <formula>TEXT(Account__r.QuickBooks_Nominal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuickBooks Nominal Code</label>
    <type>Text</type>
</CustomField>