force-app/main/default/objects/Invoice__c/fields/Quickbooks_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Payment_Terms__c</fullName>
    <formula>&quot;Net &quot; &amp; text( Account__r.Payment_Terms_Days__c )</formula>
    <label>Quickbooks Payment Terms</label>
    <type>Text</type>
</CustomField>